Added some about me text

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -4,4 +4,16 @@ icon: fa-user
 order: 3
 ---
 
-<p> Hey! My name is Nicholas but I am also known online as Micadurp or Arzul.</p>
+<p>
+Hey! My name is Nicholas but I am also known online on various media as Micadurp or Arzul. 
+I am currently looking to start a career as a game programmer as previously I have only professionally worked in the Telecom industry. 
+I have studied game programming at BTH but I have ended my education there a year early due to getting a job programming at Ericsson through HiQ. 
+The practical application my skills appealed to me a lot more than the theoretical that I had left at BTH. 
+However, some of the most fun I have had with programming is when I worked in groupprojects within school where we created a videogame from scratch!
+</br>
+</br>
+In my freetime I play a large variety of games, watch various series, both animated and not, and I read a bunch of manga. 
+I generally play more multiplayer games than singleplayer but enjoy most types of games. 
+I also have a few boardgames that I play occasionally when I am able to get a few friends together. 
+
+</p>
