More changes and errors

--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -10,4 +10,6 @@ order: 1
   <h2 class="alt"> <strong>Nicholas De Young</strong><br />
   Game Programmer</h2>
 </header>
- 
+ <p>
+	Welcome to my home in the internet!
+ </p>
