--- a/_sections/wizards.html
+++ b/_sections/wizards.html
@@ -6,8 +6,9 @@ order: 2
 
 <p>
 	<embed> 
-		<iframe width="800" height="600" src="https://www.youtube.com/embed/-AOR8TstEso" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="800" height="600" src="https://www.youtube.com/embed/-AOR8TstEso" frameborder="" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</embed>
+	</br>
 	This was a school project at BTH where I worked with 14 other students to develop a game from the ground up including the game engine. 
 	I worked on the network code of the game with one other person. 
 	By being in control of the network code I would often work with others in the group to make sure the different parts of the game worked over multiplayer.
