--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -8,7 +8,7 @@ order: 3
 Hey! My name is Nicholas but I am also known online on various media as Micadurp or Arzul. 
 I am currently looking to start a career as a game programmer as previously I have only professionally worked in the Telecom industry. 
 I have studied game programming at BTH but I have ended my education there a year early due to getting a job programming at Ericsson through HiQ. 
-The practical application my skills appealed to me a lot more than the theoretical that I had left at BTH. 
+The practical application of my skills appealed to me a lot more than the theoretical that I had left at BTH. 
 However, some of the most fun I have had with programming is when I worked in groupprojects within school where we created a videogame from scratch!
 </br>
 </br>
