--- a/wizards.html
+++ b/wizards.html
@@ -11,9 +11,10 @@ order: 2
 	</embed>
 	</br>
 	This was a school project at BTH where I worked with 14 other students to develop a game from the ground up including the game engine. 
+	The project was around 5 months work and we had a mix of programmers and technical artists to develop it. 
+	The game is made in C++ and Lua. It uses OpenGL for rendering
 	I was in charge of the networking of the game and worked with one other person. It was written using using sockets and was a tremendous learning experience.
 	A large chunk of the game was affected by the network and because of that I very often had to work with others and incorporate multiplayer code into their area.
-	The project was around 5 months work and we had a mix of programmers and technical artists to develop it. 
 	We have no plans on finishing it but was fun to work on.
 	The code is quite a mess and there are many things that need fixing but here is a link to <a href="https://github.com/Manspear/Project_Erebus">the repository</a>! Also note I am not the owner of the repository.
 </p>
