more small fixes

--- a/blonic.html
+++ b/blonic.html
@@ -12,7 +12,7 @@ order: 3
 	</br>
 	This was a small school project at BTH where we developed a game from the ground up including the game engine. 
 	The project was around 2-3 months work, 20 hours a week, with 3 programmers and 3 technical artists to develop it. 
-	Made in C++ and uses DirectX for Rendering, no other libraries used. I did most of the physics and had a large part in the setting up the groundwork for the engine (Shader code, Reading/Loading files, all that stuff)
+	Made in C++ and uses DirectX for Rendering, no other libraries used. I did most of the physics and had a large part in the setting up the groundwork for the engine (Shaders, Graphics, Reading/Loading files, collision, all that stuff)
 	There are no plans of finishing this project.
 	This is very old code and is also very unpolished, view at own risk: <a href="https://github.com/Micadurp/Blonic-The-Hooker">Blonic</a>!
 </p>
