--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -29,8 +29,7 @@ order: 2
       <div class="item">
         <a href="https://deyoung.se/gravitygun" class="image fit"><img src="{{ 'assets/images/pic04.jpg' | relative_url }}" alt="gravitygun" /></a>
         <header>
-          <h3>Playing
-               with Unreal</h3>
+          <h3>Gravity gun in unreal</h3>
         </header>
       </div>
     </div>
