--- a/gravitygun.html
+++ b/gravitygun.html
@@ -6,5 +6,12 @@ order: 4
 ---
 
 <p>
-	Lorem ipsum
+    <embed> 
+        <iframe width="800" height="600" src="https://www.youtube.com/watch?v=9jd8I2wuhyc" frameborder="" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </embed>
+    <embed> 
+		<iframe width="800" height="600" src="https://www.youtube.com/watch?v=mHjMgcp66e4" frameborder="" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</embed>
+    Working with unreal engine in my own time and also going through an online course on Udemy. This is just a result of that and 
+    the Gravity gun is a core mechanic within Half-Life so it was a great mechanic to implement within the unreal engine!
 </p>
