--- a/wizards.html
+++ b/wizards.html
@@ -6,6 +6,8 @@ order: 2
 ---
 
 <p>
+	<h3>Wizards & Magic</h3>
+	</br>
 	<embed> 
 		<iframe width="800" height="600" src="https://www.youtube.com/embed/-AOR8TstEso" frameborder="" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</embed>
