--- a/gravitygun.html
+++ b/gravitygun.html
@@ -7,10 +7,10 @@ order: 4
 
 <p>
     <embed> 
-        <iframe width="800" height="600" src="https://www.youtube.com/watch?v=9jd8I2wuhyc" frameborder="" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/9jd8I2wuhyc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
     </embed>
     <embed> 
-		<iframe width="800" height="600" src="https://www.youtube.com/watch?v=mHjMgcp66e4" frameborder="" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/mHjMgcp66e4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </embed>
     </br>
     Working with unreal engine in my own time and also going through an online course on Udemy. This is just a result of that and 
