--- a/gravitygun.html
+++ b/gravitygun.html
@@ -13,6 +13,6 @@ order: 4
         <iframe width="560" height="315" src="https://www.youtube.com/embed/mHjMgcp66e4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </embed>
     </br>
-    Working with unreal engine in my own time and also going through an online course on Udemy. This is just a result of that and 
-    the Gravity gun is a core mechanic within Half-Life so it was a great mechanic to implement within the unreal engine!
+    Working with unreal engine in my own time and also going through an online course on Udemy. This is just a result of that! 
+    The Gravity gun is a core mechanic within Half-Life so it was a great mechanic to implement within the unreal engine!
 </p>
